--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<div class="header">
+    <app-header></app-header>
+</div>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
