--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -1,10 +1,8 @@
 <header class="header">
     <div class="container d-flex">
         <div class="row align-items-center w-100">
-            <div class="col about-me">
-                <span>
-                    About Me
-                </span>
+            <div class="about-me">
+                <img src="../../../../assets/images/about-me.jpg">
             </div>
             <div class="col text-center">
                 <span class="title">
