--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="header">
     <div class="container d-flex">
         <div class="row align-items-center">
-            <div class="col-4 col-lg-2">
+            <div class="col-4 col-lg-2" routerLink="">
                 <div class="about-me">
                     <img src="../../../../assets/images/about-me.jpg">
                 </div>
@@ -9,26 +9,26 @@
             <div class="col-10 collapse">
                 <div class="row align-items-center">
                     <div class="col">
-                        <span class="title">
+                        <span class="title" routerLink="my-city">
                             My City
                         </span>
                     </div>
                     <div class="col">
-                        <span class="title">
+                        <span class="title" routerLink="our-legacy">
                             Our Legacy
                         </span>
                     </div>
                     <div class="col">
-                        <span class="title">
+                        <span class="title" routerLink="my-interests">
                             My interests
                         </span>
                     </div>
                     <div class="col">
-                        <span class="title">
+                        <span class="title" routerLink="contact">
                             Contact
                         </span>
                     </div>
-                    <div class="col text-end title login" >
+                    <div class="col text-end title login" routerLink="login" >
                         Login
                     </div>
                 </div>
