--- a/src/app/components/layout/header/side-bar/side-bar.component.html
+++ b/src/app/components/layout/header/side-bar/side-bar.component.html
@@ -6,10 +6,10 @@
     <div class="offcanvas-body">
         <div class="d-flex h-100">
             <div class="sidebar-link">
-                <div class="fw-bold" (click)="closeOffCanvas()">My City</div>
-                <div class="fw-bold" (click)="closeOffCanvas()">Our Legacy</div>
-                <div class="fw-bold" (click)="closeOffCanvas()">My interests</div>
-                <div class="fw-bold" (click)="closeOffCanvas()">Contact</div>  
+                <div class="fw-bold" (click)="closeOffCanvas()" routerLink="my-city">My City</div>
+                <div class="fw-bold" (click)="closeOffCanvas()" routerLink="our-legacy">Our Legacy</div>
+                <div class="fw-bold" (click)="closeOffCanvas()" routerLink="my-interests">My interests</div>
+                <div class="fw-bold" (click)="closeOffCanvas()" routerLink="contact">Contact</div>  
             </div>
         </div>
     </div>
