--- a/src/app/components/pages/home-page/home-page.component.html
+++ b/src/app/components/pages/home-page/home-page.component.html
@@ -1,12 +1,3 @@
-<div class="row text-white">
-    <div class="col-6" >
-        <p  style="background-color: blue;">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque culpa tempore sed error perferendis inventore ipsum, omnis assumenda cumque enim dicta excepturi voluptate ab repellendus, nesciunt voluptates beatae, aut possimus!
-        </p>
-    </div>
-    <div class="col-6">
-        <p style="background-color: red;">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, consequuntur officiis modi aut harum reiciendis provident reprehenderit cupiditate soluta. Earum totam repellat, dignissimos impedit adipisci nisi dolore error laudantium incidunt.
-        </p>
-    </div>
+<div class="main-card">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis repudiandae dignissimos alias mollitia, quo neque. Odit, quos sit, commodi illum asperiores facere beatae assumenda nostrum, reiciendis cupiditate unde alias tempora?
 </div>
