--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'bootstrap' ;
+@import '../node_modules/ngx-toastr/toastr.css';
+@import '../node_modules/swiper/swiper-bundle.css';
 html,
 body {
     height: 100%;
@@ -20,4 +22,32 @@ body {
     border-radius: 5px;
     padding: 10px;
     box-shadow: 0 0 8px var(--bs-gray-500);
+}
+
+.ngx-toastr {
+    margin-bottom: 10px !important;
+}
+
+.swiper-container{
+    background-color: white;
+    img{
+        height: 100%;
+    }
+}
+
+.swiper-wrapper{
+    text-align: center;
+}
+
+.swiper-button-next, .swiper-button-prev{
+    width: 50px;
+    height: 50px;
+    background: var(--bs-gray-200);
+    color: black;
+    border-radius: 100%;
+    text-align: center;
+    &::after{
+        font-size: 35px;
+        font-weight: bold;
+    }
 }
