--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
 html,
 body {
     height: 100%;
+    width: 100%;
     margin: 0;
     padding: 0;
     font-family: var(--bs-body-font-family);
@@ -49,5 +50,20 @@ body {
     &::after{
         font-size: 35px;
         font-weight: bold;
+    }
+}
+
+::-webkit-scrollbar {
+    width: 7px;
+}
+  
+::-webkit-scrollbar-track {
+    background-color: white;
+}
+  
+::-webkit-scrollbar-thumb {
+    background-color: var(--bs-gray-400);
+    &:hover{
+        background-color: var(--bs-gray-600);
     }
 }
