--- a/src/app/components/pages/account/login/login.component.html
+++ b/src/app/components/pages/account/login/login.component.html
@@ -23,7 +23,7 @@
             <button class="btn btn-primary w-100" [disabled]="loginForm.invalid" (click)="login()">Login</button>
         </div>
         <div class="text-end mt-3">
-            Don't have an account?  <span class="router-text" routerLink="/register">Create account</span>
+            Don't have an account?  <span class="router-text" routerLink="/sign-up">Create account</span>
         </div>
     </div>
 </div>
