--- a/src/app/components/layout/header/header.component.scss
+++ b/src/app/components/layout/header/header.component.scss
@@ -12,16 +12,19 @@
     }
 }
 .title{
+    text-decoration: none;
+    color: black;
     display: inline-block;
     font-weight: 500;
     font-size: 20px;
-    padding-bottom: 2px;
+    padding-bottom: 5px;
     cursor: pointer;
     &:hover{
         padding-bottom: 10px;
     }
-    &.login{
-        padding-bottom: 0 !important;
+    &.active{
+        border-bottom: 2px solid var(--bs-gray-500);
+        padding-bottom: 10px !important;
     }
 }
 
