--- a/src/app/components/pages/home-page/home-page.component.html
+++ b/src/app/components/pages/home-page/home-page.component.html
@@ -1,3 +1,153 @@
 <div class="main-card">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis repudiandae dignissimos alias mollitia, quo neque. Odit, quos sit, commodi illum asperiores facere beatae assumenda nostrum, reiciendis cupiditate unde alias tempora?
+    <div class="row">
+        <div class="col-12 col-md-6 col-lg-3 border-r d-flex align-items-center justify-content-center">
+            <div class="text-center">
+                <img class="me" src="../../../../assets/images/me.jpg" alt="">
+                <div class="fw-bold mt-2">Ejder Kadir Kuzu</div>
+                <div class="text-muted mt-1">Software Developer</div>
+                <div class="d-flex gap-3 mt-1 justify-content-center">
+                    <a class="c-pointer text-secondary" href="https://www.instagram.com/kadirkuzu_/">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                    <a class="c-pointer text-secondary" href="https://www.linkedin.com/in/ejder-kadir-kuzu-750167243/">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                    <a class="c-pointer text-secondary" href="https://github.com/kadirkuzu">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-9 d-flex align-items-center">
+            <div>
+                <div class="text-muted mt-1">Software Developer</div>
+                <div class="text-xl mt-1">
+                    Merhaba , ben <span class="fw-bold" >Ejder Kadir Kuzu.</span> 
+                </div>
+                <p class="mt-1">
+                    Kişisel sayfama hoş geldiniz . Bu sayfada size becerilerimden , çalışmalarımdan , eğitim hayatımdan ve şehrimden bahsedeceğim . 
+                    Dünyaya Siirt şehrinde geldim . İlkokul ve liseyi Siirt'te bitirdikten sonra üniversite için Alanya'ya gittim . Bir sene hazırlığın ardından bilgisayar 
+                    mühendisliğine başladım . Daha sonra Sakarya Üniversitesi'ne geçerek eğitimime burada devam etmeye karar verdim . <br>  
+                    Bu süre zarfında web tasarımı konusunda kendimi geliştirerek bir seviyeye geldim ve daha sonra kendimi daha iyi geliştirebileceğim bir şirket bünyesine girdim. <br><br>      
+                    Şu an Sakarya Üniversitesi Bilgisayar Mühendisliği öğrencisiyim . Aynı zamanda Hyper Company adlı şirkette Frontend Developer olarak görev alıyorum . Kendimi sürekli geliştirmeye devam ediyorum.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row mt-3">
+    <div class="col-12 col-lg-6 mt-2">
+        <div class="main-card">
+            <h4 class="title text-center">
+                Eğitim
+            </h4>
+            <div class="d-flex justify-content-center mt-3">
+                <div>
+                    <div class="d-flex align-items-center position-relative" [ngStyle]="{'margin-bottom':'37px'}">
+                        <div class="grey-line-bottom mx-3"></div>
+                        <span class="text-muted">2008-2016</span>
+                        <span class="info-circle mx-3" [ngStyle]="{'border-color':'red'}"></span>
+                        <span>Siirt Fevzi Çakmak İlkokulu</span>
+                    </div>
+                    <div class="d-flex align-items-center position-relative">
+                        <div class="grey-line-bottom mx-3"></div>
+                        <span class="text-muted">2016-2019</span>
+                        <span class="info-circle mx-3" [ngStyle]="{'border-color':'blue'}"></span>
+                        <span>Siirt Atatürk Anadolu Lisesi</span>
+                    </div>
+                    <div class="d-flex align-items-center position-relative">
+                        <div class="grey-line-bottom mx-3" [ngStyle]="{'top':'40px'}"></div>
+                        <span class="text-muted">2020-2021</span>
+                        <span class="info-circle mx-3" [ngStyle]="{'border-color':'orange'}"></span>
+                        <div>
+                            Alaaddin Keykubat Üniversitesi
+                            <div class="text-muted">İngilizce Hazırlık</div>
+                        </div>
+                    </div>
+                    <div class="d-flex align-items-center position-relative">
+                        <div class="grey-line-bottom mx-3" [ngStyle]="{'top':'40px'}"></div>
+                        <span class="text-muted">2021-2022</span>
+                        <span class="info-circle mx-3" [ngStyle]="{'border-color':'black'}"></span>
+                        <div>
+                            Alaaddin Keykubat Üniversitesi
+                            <div class="text-muted">Bilgisayar Mühendisliği</div>
+                        </div>
+                    </div>
+                    <div class="d-flex align-items-center position-relative">
+                        <span class="text-muted">2022-2023</span>
+                        <span class="info-circle mx-3" [ngStyle]="{'border-color':'green'}"></span>
+                        <div>
+                            Sakarya Üniversitesi (Şu an)
+                            <div class="text-muted">Bilgisayar Mühendisliği</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-12 col-lg-6 mt-2">
+        <div class="main-card h-100">
+            <h4 class="title text-center">
+                Beceriler
+            </h4>
+            <div class="row">
+                <div class="col-3 d-flex justify-content-center align-items-center left-title">
+                    <h6>Frontend</h6>
+                </div>
+                <div class="col-9 d-flex align-items-center">
+                    <div class="mx-3">
+                        <li>Html | Css | Scss | Bootstrap</li>
+                        <li>Javascript | Typescript | Angular</li>
+                        <li>RxJS</li>
+                        <li>NgRx</li>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-3 d-flex justify-content-center align-items-center left-title">
+                    <h6>Backend</h6>
+                </div>
+                <div class="col-9 d-flex align-items-center">
+                    <div class="mx-3">
+                        <li>SQL</li>
+                        <li>NodeJs</li>
+                        <li>Django</li>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-3 d-flex justify-content-center align-items-center left-title">
+                    <h6>Python</h6>
+                </div>
+                <div class="col-9 d-flex align-items-center">
+                    <div class="mx-3">
+                        <li>Selenium</li>
+                        <li>Pygame(2D)</li>
+                        <li>Sqlite3</li>
+                        <li>Django</li>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-12 mt-3">
+        <div class="main-card">
+            <div class="row d-flex align-items-center">
+                <div class="col-12 text-center">
+                    <h2>
+                        Hobilerim
+                    </h2>
+                </div>
+                <div class="col-12 col-lg-4 mt-2">
+                    <img class="w-100 h-100 image" src="../../../../assets/images/software2.jpg" alt="">
+                </div>
+                <div class="col-12 col-lg-4 mt-2">
+                    <img class="w-100 h-100 image" src="../../../../assets/images/futbol1.jpg" alt="">
+                </div>
+                <div class="col-12 col-lg-4 mt-2">
+                    <img class="w-100 h-100 image" src="../../../../assets/images/csgo1.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
