--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,7 @@
 <div class="container">
     <router-outlet></router-outlet>
 </div>
+<div class="footer">
+    <app-footer></app-footer>
+</div>
+<app-scroll-top></app-scroll-top>
