--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,18 @@
 .header{
-    margin-bottom: 50px;
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    right: 0;
+    border-bottom: 1px solid var(--bs-gray-400);
 }
-@media (max-width:992px){
-    .header{
-        margin-bottom: 20px;
+@media (max-width:767px){
+    .container{
+        padding-top:100px !important;
     }
+}
+
+.container{
+    padding-top: 150px;
+    padding-bottom: 100px;
 }
