--- a/src/app/components/layout/header/side-bar/side-bar.component.html
+++ b/src/app/components/layout/header/side-bar/side-bar.component.html
@@ -3,14 +3,15 @@
         <h5 class="offcanvas-title" id="sideBarCanvasLabel">About Me</h5>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close" #closeSideBarCanvas></button>
     </div>
-    <div class="offcanvas-body">
-        <div class="d-flex h-100">
-            <div class="sidebar-link">
-                <div class="fw-bold" (click)="closeOffCanvas()" routerLink="my-city">My City</div>
-                <div class="fw-bold" (click)="closeOffCanvas()" routerLink="our-legacy">Our Legacy</div>
-                <div class="fw-bold" (click)="closeOffCanvas()" routerLink="my-interests">My interests</div>
-                <div class="fw-bold" (click)="closeOffCanvas()" routerLink="contact">Contact</div>  
-            </div>
+    <div class="offcanvas-body d-flex flex-column">
+        <div class="sidebar-link">
+            <div class="fw-bold" (click)="closeOffCanvas()" routerLink="my-city">Şehrim</div>
+            <div class="fw-bold" (click)="closeOffCanvas()" routerLink="our-team">Takımımız</div>
+            <div class="fw-bold" (click)="closeOffCanvas()" routerLink="my-interests">İlgi Alanlarım </div>
+            <div class="fw-bold" (click)="closeOffCanvas()" routerLink="contact">İletişim</div>  
+        </div>
+        <div class="mt-auto text-end">
+            <button class="btn btn-secondary" (click)="closeOffCanvas()" routerLink="login">Giriş</button>
         </div>
     </div>
 </div>
